--- a/src/main/webapp/form_purchase_in_warehouse.html
+++ b/src/main/webapp/form_purchase_in_warehouse.html
@@ -22,108 +22,11 @@
 <div id="wrapper">
   <!-- 侧边栏 -->
   <div id="left_sidebar"></div>
-
   <div id="page-wrapper" class="gray-bg dashbard-1">
-    <div class="row border-bottom">
-      <nav class="navbar navbar-static-top" role="navigation" style="margin-bottom: 0">
-        <div class="navbar-header">
-          <a class="navbar-minimalize minimalize-styl-2 btn btn-primary " href="form_basic.html#"><i class="fa fa-bars"></i> </a>
-          <form role="search" class="navbar-form-custom" method="post" action="search_results.html">
-            <div class="form-group">
-              <input type="text" placeholder="请输入您需要查找的内容 …" class="form-control" name="top-search" id="top-search">
-            </div>
-          </form>
-        </div>
-        <ul class="nav navbar-top-links navbar-right">
-          <li>
-            <span class="m-r-sm text-muted welcome-message"><a href="index.html" title="返回首页"><i class="fa fa-home"></i></a>欢迎使用H+后台主题</span>
-          </li>
-          <li class="dropdown">
-            <a class="dropdown-toggle count-info" data-toggle="dropdown" href="index.html#">
-              <i class="fa fa-envelope"></i>  <span class="label label-warning">16</span>
-            </a>
-            <ul class="dropdown-menu dropdown-messages">
-              <li>
-                <div class="dropdown-messages-box">
-                  <a href="profile.html" class="pull-left">
-                    <img alt="image" class="img-circle" src="img/a7.jpg">
-                  </a>
-                  <div class="media-body">
-                    <small class="pull-right">46小时前</small>
-                    <strong>小四</strong> 项目已处理完结
-                    <br>
-                    <small class="text-muted">3天前 2014.11.8</small>
-                  </div>
-                </div>
-              </li>
-              <li class="divider"></li>
-              <li>
-                <div class="dropdown-messages-box">
-                  <a href="profile.html" class="pull-left">
-                    <img alt="image" class="img-circle" src="img/a4.jpg">
-                  </a>
-                  <div class="media-body ">
-                    <small class="pull-right text-navy">25小时前</small>
-                    <strong>国民岳父</strong> 这是一条测试信息
-                    <br>
-                    <small class="text-muted">昨天</small>
-                  </div>
-                </div>
-              </li>
-              <li class="divider"></li>
-              <li>
-                <div class="text-center link-block">
-                  <a href="mailbox.html">
-                    <i class="fa fa-envelope"></i>  <strong> 查看所有消息</strong>
-                  </a>
-                </div>
-              </li>
-            </ul>
-          </li>
-          <li class="dropdown">
-            <a class="dropdown-toggle count-info" data-toggle="dropdown" href="index.html#">
-              <i class="fa fa-bell"></i>  <span class="label label-primary">8</span>
-            </a>
-            <ul class="dropdown-menu dropdown-alerts">
-              <li>
-                <a href="mailbox.html">
-                  <div>
-                    <i class="fa fa-envelope fa-fw"></i> 您有16条未读消息
-                    <span class="pull-right text-muted small">4分钟前</span>
-                  </div>
-                </a>
-              </li>
-              <li class="divider"></li>
-              <li>
-                <a href="profile.html">
-                  <div>
-                    <i class="fa fa-qq fa-fw"></i> 3条新回复
-                    <span class="pull-right text-muted small">12分钟钱</span>
-                  </div>
-                </a>
-              </li>
-              <li class="divider"></li>
-              <li>
-                <div class="text-center link-block">
-                  <a href="notifications.html">
-                    <strong>查看所有 </strong>
-                    <i class="fa fa-angle-right"></i>
-                  </a>
-                </div>
-              </li>
-            </ul>
-          </li>
 
-
-          <li>
-            <a href="login.html">
-              <i class="fa fa-sign-out"></i> 退出
-            </a>
-          </li>
-        </ul>
-
-      </nav>
-    </div>
+    <!--头部-->
+    <div id="header"></div>
+    <!--标题-->
     <div class="row wrapper border-bottom white-bg page-heading">
       <div class="col-lg-10">
         <h2>购买入库</h2>
@@ -143,8 +46,8 @@
 
       </div>
     </div>
+    <!--表单本体-->
     <div class="wrapper wrapper-content animated fadeInRight">
-      <!--                所有表单元素  -->
       <div class="row">
         <div class="col-lg-12">
           <div class="ibox float-e-margins">
@@ -251,57 +154,7 @@
         </div>
       </div>
     </div>
-    <div class="footer">
-      <div class="pull-right">
-        By：<a href="http://www.zi-han.net" target="_blank">zihan's blog</a>
-      </div>
-      <div>
-        <strong>Copyright</strong> H+ &copy; 2014
-      </div>
-    </div>
 
-  </div>
-</div>
-
-
-</div>
-<div id="modal-form" class="modal fade" aria-hidden="true">
-  <div class="modal-dialog">
-    <div class="modal-content">
-      <div class="modal-body">
-        <div class="row">
-          <div class="col-sm-6 b-r">
-            <h3 class="m-t-none m-b">登录</h3>
-
-            <p>欢迎登录本站(⊙o⊙)</p>
-
-            <form role="form">
-              <div class="form-group">
-                <label>用户名：</label>
-                <input type="email" placeholder="请输入用户名" class="form-control">
-              </div>
-              <div class="form-group">
-                <label>密码：</label>
-                <input type="password" placeholder="请输入密码" class="form-control">
-              </div>
-              <div>
-                <button class="btn btn-sm btn-primary pull-right m-t-n-xs" type="submit"><strong>登录</strong>
-                </button>
-                <label>
-                  <input type="checkbox" class="i-checks">自动登录</label>
-              </div>
-            </form>
-          </div>
-          <div class="col-sm-6">
-            <h4>还不是会员？</h4>
-            <p>您可以注册一个账户</p>
-            <p class="text-center">
-              <a href="form_basic.html"><i class="fa fa-sign-in big-icon"></i></a>
-            </p>
-          </div>
-        </div>
-      </div>
-    </div>
   </div>
 </div>
 
@@ -326,6 +179,15 @@
 <script src="js/plugins/pace/pace.min.js"></script>
 
 <!-- Page-Level Scripts -->
+
+<!-- 导入header -->
+<script>
+  $(function () {
+    $.get("header.html",function (data) {
+      $("#header").html(data);
+    });
+  });
+</script>
 
 <!-- 导入left_sidebar -->
 <script>
