--- a/src/main/webapp/form_other_in_warehouse.html
+++ b/src/main/webapp/form_other_in_warehouse.html
@@ -7,8 +7,8 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0"><meta name="renderer" content="webkit">
 
   <title>基本表单</title>
-  <meta name="keywords" content="">
-  <meta name="description" content="">
+  <meta name="keywords" content="H+后台主题,后台bootstrap框架,会员中心主题,后台HTML,响应式后台">
+  <meta name="description" content="H+是一个完全响应式，基于Bootstrap3最新版本开发的扁平化主题，她采用了主流的左右两栏式布局，使用了Html5+CSS3等现代技术">
 
   <link href="css/bootstrap.min.css?v=3.4.0" rel="stylesheet">
   <link href="font-awesome/css/font-awesome.css?v=4.3.0" rel="stylesheet">
@@ -127,17 +127,7 @@
     <div class="row wrapper border-bottom white-bg page-heading">
       <div class="col-lg-10">
         <h2>其他入库</h2>
-        <ol class="breadcrumb">
-          <li>
-            <a href="index.html">主页</a>
-          </li>
-          <li>
-            <a>表单</a>
-          </li>
-          <li>
-            <strong>其他入库</strong>
-          </li>
-        </ol>
+
       </div>
       <div class="col-lg-2">
 
@@ -201,48 +191,14 @@
                         <div class="">
                           <a onclick="fnClickAddRow();" href="javascript:void(0);" class="btn btn-primary ">添加物品</a>
                         </div>
-                        <table class="table table-striped table-bordered table-hover " id="editable">
-                          <thead>
-                          <tr>
-                            <th>物品id</th>
-                            <th>物品名称</th>
-                            <th>规格</th>
-                            <th>数量</th>
-                            <th>包装单位</th>
-                            <th>分类</th>
-                            <th>单价</th>
-                            <th>过期时间</th>
-                            <th>警戒上限</th>
-                            <th>警戒下限</th>
-                            <th>备注</th>
-                          </tr>
-                          </thead>
-                          <tbody>
-                          <tr class="gradeX">
-                            <td>id</td>
-                            <td>物品</td>
-                            <td>规格</td>
-                            <td class="center">4</td>
-                            <td class="center">包装单位</td>
-                            <td class="center">分类</td>
-                            <td class="center">10.0</td>
-                            <td class="center">xxxx-xx-xx</td>
-                            <td class="center">300</td>
-                            <td class="center">30</td>
-                            <td class="center">备注</td>
-                          </tr>
-                          </tbody>
-                        </table>
 
+
+                        <table id="editable" class="datatable table table-striped table-bordered table-hover">
+
+                        </table>
+                          <button class="btn btn-primary"  onclick="other_submit()" style="float:right">确认</button>
                       </div>
                     </div>
-                  </div>
-                </div>
-                <div class="hr-line-dashed"></div>
-                <div class="form-group">
-                  <div class="col-sm-4 col-sm-offset-2">
-                    <button class="btn btn-primary" type="submit">确认</button>
-                    <button class="btn btn-white" type="submit">取消</button>
                   </div>
                 </div>
               </form>
@@ -251,59 +207,10 @@
         </div>
       </div>
     </div>
-    <div class="footer">
-      <div class="pull-right">
-        By：<a href="http://www.zi-han.net" target="_blank">zihan's blog</a>
-      </div>
-      <div>
-        <strong>Copyright</strong> H+ &copy; 2014
-      </div>
-    </div>
 
   </div>
 </div>
 
-
-</div>
-<div id="modal-form" class="modal fade" aria-hidden="true">
-  <div class="modal-dialog">
-    <div class="modal-content">
-      <div class="modal-body">
-        <div class="row">
-          <div class="col-sm-6 b-r">
-            <h3 class="m-t-none m-b">登录</h3>
-
-            <p>欢迎登录本站(⊙o⊙)</p>
-
-            <form role="form">
-              <div class="form-group">
-                <label>用户名：</label>
-                <input type="email" placeholder="请输入用户名" class="form-control">
-              </div>
-              <div class="form-group">
-                <label>密码：</label>
-                <input type="password" placeholder="请输入密码" class="form-control">
-              </div>
-              <div>
-                <button class="btn btn-sm btn-primary pull-right m-t-n-xs" type="submit"><strong>登录</strong>
-                </button>
-                <label>
-                  <input type="checkbox" class="i-checks">自动登录</label>
-              </div>
-            </form>
-          </div>
-          <div class="col-sm-6">
-            <h4>还不是会员？</h4>
-            <p>您可以注册一个账户</p>
-            <p class="text-center">
-              <a href="form_basic.html"><i class="fa fa-sign-in big-icon"></i></a>
-            </p>
-          </div>
-        </div>
-      </div>
-    </div>
-  </div>
-</div>
 
 <!-- Mainly scripts -->
 <script src="js/jquery-2.1.1.min.js"></script>
@@ -317,13 +224,14 @@
 
 <!-- iCheck -->
 <script src="js/plugins/iCheck/icheck.min.js"></script>
+
+<!--&lt;!&ndash;引入JavaScript&ndash;&gt;-->
+<script type="text/javascript" language="javascript" src="https://cdn.datatables.net/1.10.15/js/jquery.dataTables.min.js"></script>
+
+
 <!-- Data Tables -->
 <script src="js/plugins/dataTables/jquery.dataTables.js"></script>
 <script src="js/plugins/dataTables/dataTables.bootstrap.js"></script>
-
-<!-- Custom and plugin javascript -->
-<script src="js/hplus.js?v=2.2.0"></script>
-<script src="js/plugins/pace/pace.min.js"></script>
 
 <!-- Page-Level Scripts -->
 
@@ -337,50 +245,225 @@
 </script>
 
 <script>
-  $(document).ready(function () {
-    $('.dataTables-example').dataTable();
+  const dataSets = [
+    ['aaa', '规格', '20', '单位', 'fenlei', '10.0', 'xxxx-xx', '300', '20', '1hao', 'beizhu'],
+    ['aaa1', '规格1', '20', '单位', 'fenlei', '10.0', 'xxxx-xx', '300', '20', '1hao', 'beizhu'],
+    ['aaa2', '规格', '20', '单位', 'fenlei', '10.0', 'xxxx-xx', '300', '20', '1hao', 'beizhu'],
+    ['aaa3', '规格1', '20', '单位', 'fenlei', '10.0', 'xxxx-xx', '300', '20', '1hao', 'beizhu'],
+    ['aaa4', '规格', '20', '单位', 'fenlei', '10.0', 'xxxx-xx', '300', '20', '1hao', 'beizhu'],
+    ['aaa5', '规格1', '20', '单位', 'fenlei', '10.0', 'xxxx-xx', '300', '20', '1hao', 'beizhu'],
+    ['aaa6', '规格', '20', '单位', 'fenlei', '10.0', 'xxxx-xx', '300', '20', '1hao', 'beizhu'],
+    ['aaa7', '规格1', '20', '单位', 'fenlei', '10.0', 'xxxx-xx', '300', '20', '1hao', 'beizhu'],
+    ['aaa8', '规格', '20', '单位', 'fenlei', '10.0', 'xxxx-xx', '300', '20', '1hao', 'beizhu'],
+    ['aaa9', '规格1', '20', '单位', 'fenlei', '10.0', 'xxxx-xx', '300', '20', '1hao', 'beizhu'],
+    ['aaa10', '规格', '20', '单位', 'fenlei', '10.0', 'xxxx-xx', '300', '20', '1hao', 'beizhu'],
+    ['aaa11', '规格1', '20', '单位', 'fenlei', '10.0', 'xxxx-xx', '300', '20', '1hao', 'beizhu'],
+    ['aaa12', '规格', '20', '单位', 'fenlei', '10.0', 'xxxx-xx', '300', '20', '1hao', 'beizhu'],
+    ['aaa13', '规格1', '20', '单位', 'fenlei', '10.0', 'xxxx-xx', '300', '20', '1hao', 'beizhu'],
+    ['aaa14', '规格', '20', '单位', 'fenlei', '10.0', 'xxxx-xx', '300', '20', '1hao', 'beizhu'],
+    ['aaa15', '规格1', '20', '单位', 'fenlei', '10.0', 'xxxx-xx', '300', '20', '1hao', 'beizhu'],
+  ];
+  $(document).ready(function (){
 
-    /* Init DataTables */
-    var oTable = $('#editable').dataTable();
+    var table = $('#editable').DataTable({
+      retrieve: true,
+      data:dataSets,
+      columns:[
+        {
+          'field': "name",
+          'title': '物品名称',
+          'defaultContent' : "",
+          'sClass': 'text-center'
+        }, {
+          'field': "specification",
+          'title': '规格',
+          'defaultContent' : "",
+          'sClass': 'text-center'
+        }, {
+          'field': "quantity",
+          'title': '数量',
+          'defaultContent' : "",
+          'sClass': 'text-center'
+        }, {
+          'field': "unit",
+          'title': '包装单位',
+          'defaultContent' : "",
+          'sClass': 'text-center'
+        }, {
+          'field': "classification",
+          'title': '分类',
+          'defaultContent' : "",
+          'sClass': 'text-center'
+        }, {
+          'field': "price",
+          'title': '单价',
+          'defaultContent' : "",
+          'sClass': 'text-center'
+        }, {
+          'field': "expiration_time",
+          'title': '过期时间',
+          'defaultContent' : "",
+          'sClass': 'text-center'
+        }, {
+          'field': "upper_limit",
+          'title': '警戒上限',
+          width:90,
+          'defaultContent' : "",
+          'sClass': 'text-center'
+        }, {
+          'field': "lower_limit",
+          'title': '警戒下限',
+          width:90,
+          'defaultContent' : "",
+          'sClass': 'text-center'
+        }, {
+          'field': "warehouse_id",
+          'title': '仓库',
+          'defaultContent' : "",
+          'sClass': 'text-center'
+        }, {
+          'field': "notes",
+          'title': '备注',
+          'defaultContent' : "",
+          'sClass': 'text-center'
+        }, {
+          field: "operate",
+          sTitle: '操作',
+          sDefaultContent : "<button class='edit-btn btn btn-primary btn-xs' type='button'>修改</button>" +
+                  "<button class='delete btn btn-default btn-xs' style='margin-left: 10px'>删除</button>",
+          sClass: 'text-center',
+          width:100,
+          "data" : null,
+          // "render" : function(data, type,row) {
+          //   var html = "<a href='javascript:void(0);'  class='edit-btn btn btn-primary btn-xs' type='button'>修改</a>"
+          //   // TODO: 按钮的修改功能
+          //   html += "<a href='javascript:void(0);'  class='delete btn btn-default btn-xs'>删除</a>"
+          //   return html;
+          //   // formatter: actionFormatter
+          // }
+        }],
+      "language": {
+        "sProcessing": "处理中...",
+        "sLengthMenu": "显示 _MENU_ 项结果",
+        "sZeroRecords": "没有匹配结果",
+        "sInfo": "显示第 _START_ 至 _END_ 项结果，共 _TOTAL_ 项",
+        "sInfoEmpty": "显示第 0 至 0 项结果，共 0 项",
+        "sInfoFiltered": "(由 _MAX_ 项结果过滤)",
+        "sInfoPostFix": "",
+        "sSearch": "搜索:",
+        "sUrl": "",
+        "sEmptyTable": "表中数据为空",
+        "sLoadingRecords": "载入中...",
+        "sInfoThousands": ",",
+        "oPaginate": {
+          "sFirst": "首页",
+          "sPrevious": "上页",
+          "sNext": "下页",
+          "sLast": "末页"
+        },
+        "oAria": {
+          "sSortAscending": ": 以升序排列此列",
+          "sSortDescending": ": 以降序排列此列"
+        }
+      }
+    });
+    $(document).on("click",".edit-btn",function(){
+      console.log("修改ing");
+      var tds=$(this).parents("tr").children();
+      $.each(tds, function(i,val){
+        var jqob=$(val);
+        if(jqob.has('button').length ){return true;}//跳过第1项 序号,按钮
+        var txt=jqob.text();
+        var put=$("<input type='text' class='changeText' style='width: 80px'>");
+        console.log(put[0].type);
+        put.val(txt);
+        jqob.html(put);
+      });
+      $(this).html("保存");
+      $(this).toggleClass("edit-btn");
+      $(this).toggleClass("save-btn");
+    });
 
-    /* Apply the jEditable handlers to the table */
-    oTable.$('td').editable('../example_ajax.php', {
-      "callback": function (sValue, y) {
-        var aPos = oTable.fnGetPosition(this);
-        oTable.fnUpdate(sValue, aPos[0], aPos[1]);
-      },
-      "submitdata": function (value, settings) {
-        return {
-          "row_id": this.parentNode.getAttribute('id'),
-          "column": oTable.fnGetPosition(this)[2]
-        };
-      },
-
-      "width": "90%",
-      "height": "100%"
+    $(document).on("click",".save-btn",function(){
+      var row=table.row($(this).parents("tr"));
+      var tds=$(this).parents("tr").children();
+      $.each(tds, function(i,val){
+        var jqob=$(val);
+        //把input变为字符串
+        if(!jqob.has('button').length){
+          var txt=jqob.children("input").val();
+          var txt2=jqob.find(".changeText").val();
+          console.log(jqob.children("input"));
+          jqob.html(txt);
+          table.cell(jqob).data(txt);//修改DataTables对象的数据
+        }
+      });
+      var data=row.data();
+      //这里写传数据的
+      $(this).html("修改");
+      $(this).toggleClass("edit-btn");
+      $(this).toggleClass("save-btn");
     });
 
 
+    // 点击删除按钮，触发删除行脚本
+    $(document).on("click",'.delete',function(){
+      $('.datatable').dataTable().fnDeleteRow($(this).closest('tr')[0]);
+    });
+
   });
+
+//点击入库按钮
+  function other_submit(){
+    if(confirm('确认入库？')){
+      //点击确认
+
+    }else{
+      //点击取消
+
+    }
+  }
+
+
+</script>
+
+<script>
+  // $(document).ready(function () {
+  //   $('.dataTables-example').dataTable();
+  //
+  //   /* Init DataTables */
+  //   var oTable = $('#editable').dataTable();
+  //
+  //   /* Apply the jEditable handlers to the table */
+  //   oTable.$('td').editable('../example_ajax.php', {
+  //     "callback": function (sValue, y) {
+  //       var aPos = oTable.fnGetPosition(this);
+  //       oTable.fnUpdate(sValue, aPos[0], aPos[1]);
+  //     },
+  //     "submitdata": function (value, settings) {
+  //       return {
+  //         "row_id": this.parentNode.getAttribute('id'),
+  //         "column": oTable.fnGetPosition(this)[2]
+  //       };
+  //     },
+  //
+  //     "width": "90%",
+  //     "height": "100%"
+  //   });
+  //
+  //
+  // });
 
   function fnClickAddRow() {
     $('#editable').dataTable().fnAddData([
-      "Custom row",
-      "New row",
-      "New row",
-      "New row",
-      "New row"]);
+      "", "", "", "",
+      "", "", "", "", "",
+      "", ""]);
 
   }
 </script>
-<script>
-  $(document).ready(function () {
-    $('.i-checks').iCheck({
-      checkboxClass: 'icheckbox_square-green',
-      radioClass: 'iradio_square-green',
-    });
-  });
-</script>
+
+
 <script>
   Date.prototype.format = function (fmt) {
     var o = {
