--- a/src/main/webapp/form_purchase.html
+++ b/src/main/webapp/form_purchase.html
@@ -293,14 +293,14 @@
 </script>
 <script>
     const dataSet = [
-        ['id', 'aaa', 'bb', '30', 'xxxx-xx', '300'],
-        ['id1', 'aaa1', 'cc', '20', 'xxxx-xx', '200'],
+        ['', '', '', '采购用途0', '', '0'],
+        ['', '', '', '采购用途1', '', '0'],
     ];
     const dataSets = [
-        ['aaa1', '规格1', '20', '单位', 'fenlei', '10.0', 'xxxx-xx', '300', '20', '1hao', 'beizhu'],
-        ['aaa2', '规格', '20', '单位', 'fenlei', '10.0', 'xxxx-xx', '300', '20', '1hao', 'beizhu'],
-        ['aaa3', '规格1', '20', '单位', 'fenlei', '10.0', 'xxxx-xx', '300', '20', '1hao', 'beizhu'],
-        ['aaa4', '规格', '20', '单位', 'fenlei', '10.0', 'xxxx-xx', '300', '20', '1hao', 'beizhu'],
+        ['aaa1', '规格1', '20', '单位', 'fenlei', '10.0', '2000-12-24', '300', '20', '1hao', 'beizhu'],
+        ['aaa2', '规格', '20', '单位', 'fenlei', '10.0', '2000-12-24', '300', '20', '1hao', 'beizhu'],
+        ['aaa3', '规格1', '20', '单位', 'fenlei', '10.0', '2000-12-24', '300', '20', '1hao', 'beizhu'],
+        ['aaa4', '规格', '20', '单位', 'fenlei', '10.0', '2000-12-24', '300', '20', '1hao', 'beizhu'],
         ['aaa5', '规格1', '20', '单位', 'fenlei', '10.0', 'xxxx-xx', '300', '20', '1hao', 'beizhu']
 
     ];
@@ -396,7 +396,7 @@
                     {
                         'field': "name",
                         'title': '物品名称',
-                        'defaultContent' : "",
+                        'defaultContent' : "-",
                         'sClass': 'text-center'
                     }, {
                         'field': "specification",
@@ -421,7 +421,7 @@
                     }, {
                         'field': "price",
                         'title': '单价',
-                        'defaultContent' : "",
+                        'defaultContent' : "0",
                         'sClass': 'text-center'
                     }, {
                         'field': "expiration_time",
@@ -499,19 +499,28 @@
 
             //点击提交按钮
             $("table tbody").on("click",".submit-btn",function (){
-                var row=table.row($(this).parents("tr"));
-                var data = row.data();
-                alert("data="+data);
-                $.ajax({
-                    "url":"getorborrow/createOrUpdateItems",
-                    "data":data,  //发送给后端的数据
-                    "type":"post",
-                    "error":function(){
-                        alert("服务器未正常响应，请重试");
-                    },
-                    "success":function(response){
-                        alert(response);
-                    }
+                var tds = $(this).parents("tr").children();
+                // 拼后端BeanUtils所需的map串
+                var front_end_data = "";
+                if (tds[0].innerText !== "") front_end_data += "purchase_requisition_id="+tds[0].innerText+"&";
+                if (tds[1].innerText !== "") front_end_data += "purchase_order_id="+tds[1].innerText+"&";
+                if (tds[3].innerText !== "") front_end_data += "purpose="+tds[3].innerText+"&";
+                if (tds[4].innerText !== "") front_end_data += "requisition_date="+tds[4].innerText+"&";
+                if (tds[5].innerText !== "") front_end_data += "&state="+tds[5].innerText+"&";
+                if (tds[6].innerText !== "") front_end_data += "&approval_user_id="+tds[6].innerText+"&";
+                if (tds[7].innerText !== "") front_end_data += "&approval_opinions="+tds[7].innerText+"&";
+                if (tds[8].innerText !== "") front_end_data += "&approval_date="+tds[8].innerText+"&";
+                // front_end_data = front_end_data.substring(0, front_end_data.length-1);  //删除最后一个字符
+
+                $.get("user/findOne", {}, function (data) {
+                    // 获取当前登陆的用户id
+                    front_end_data += "requisition_user_id="+data.user_id;
+                    console.log("front_end_data="+front_end_data);
+                    // 把前端数据传给后端
+                    $.post("purchase/createOrUpdateItems", front_end_data, function (data) {
+                        console.log("在接受后端数据之后");
+                        alert("后端返回"+data.flag);
+                    })
                 });
             })
 
@@ -531,7 +540,7 @@
                 $(this).toggleClass("save-btn");
             });
 
-            //申请表修改保存
+            // 申请表保存
             $("#table tbody").on("click",".save-btn",function(){
                 var row=table.row($(this).parents("tr"));
                 var tds=$(this).parents("tr").children();
@@ -541,11 +550,15 @@
                     console.log(!jqob.has('button').length);
                     if(!jqob.has('button').length){
                         var txt=jqob.children("input").val();
-                        console.log(jqob.children("input"));
+                        // console.log(jqob.children("input"));
                         jqob.html(txt);
                         table.cell(jqob).data(txt);//修改DataTables对象的数据
                     }
                 });
+
+
+
+
                 $(this).html("编辑");
                 $(this).toggleClass("edit-btn");
                 $(this).toggleClass("save-btn");
@@ -574,7 +587,7 @@
                 $.each(tds, function(i,val){
                     var jqob=$(val);
                     //把input变为字符串
-                    console.log(!jqob.has('button').length);
+                    //console.log(!jqob.has('button').length);
                     if(!jqob.has('button').length){
                         var txt=jqob.children("input").val();
                         console.log(jqob.children("input"));
