更新采/领借/废的申请表、出/入库表的前端页面，实现采购申请中部分数据的保存(未包含采购清单)

--- a/src/main/webapp/form_borrow_in_warehouse.html
+++ b/src/main/webapp/form_borrow_in_warehouse.html
@@ -185,10 +185,17 @@
 <!--<script type="text/javascript" language="javascript" src="//code.jquery.com/jquery-1.12.4.js"></script>-->
 <!--<script type="text/javascript" language="javascript" src="https://cdn.datatables.net/1.10.15/js/jquery.dataTables.min.js"></script>-->
 
+
 <!-- Page-Level Scripts -->
-
-
 <!--初始化代码-->
+<!-- 导入header -->
+<script>
+    $(function () {
+        $.get("header.html",function (data) {
+            $("#header").html(data);
+        });
+    });
+</script>
 <script>
     $(function () {
         $.get("left_sidebar.html",function (data) {
