--- a/src/main/webapp/left_sidebar.html
+++ b/src/main/webapp/left_sidebar.html
@@ -34,8 +34,7 @@
                 <li>
                     <a href="index.html#"><i class="fa fa-edit"></i> <span class="nav-label">表单</span><span class="fa arrow"></span></a>
                     <ul class="nav nav-second-level">
-                        <li><a href="test_center_form.html">个人中心测试页面</a></li>
-                        <li><a id="form_purchase"               href="form_purchase.html"  style="display: none;">
+                        <li><a id="form_purchase" href="form_purchase.html" style="display: none;">
                             采购申请表</a></li>
                         <li><a id="form_use_or_borrow"          href="form_use_or_borrow.html">
                             领用/借用申请表</a></li>
@@ -49,9 +48,9 @@
                             其他入库表</a></li>
                         <li><a id="form_ex_warehouse"           href="form_ex_warehouse.html" style="display: none;">
                             出库表</a></li>
-                        <li><a id="view_in_warehouse.html"      href="view_in_warehouse.html" style="display: none;">
+                        <li><a id="view_in_warehouse.html" href="view_in_warehouse_old.html" style="display: none;">
                             查看入库表</a></li>
-                        <li><a id="view_ex_warehouse"           href="view_ex_warehouse.html" style="display: none;">
+                        <li><a id="view_ex_warehouse" href="view_ex_warehouse_old.html" style="display: none;">
                             查看出库表</a></li>
                     </ul>
                 </li>
