purchase更新新建功能

--- a/src/main/webapp/form_purchase.html
+++ b/src/main/webapp/form_purchase.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0"><meta name="renderer" content="webkit">
 
-    <title>基本表单</title>
+    <title>采购申请</title>
     <meta name="keywords" >
     <meta name="description" >
     <link href="css/bootstrap.min.css?v=3.4.0" rel="stylesheet">
@@ -138,7 +138,7 @@
 
 <!-- Data Tables -->
 <script src="js/plugins/dataTables/jquery.dataTables.js"></script>
-<script src="js/plugins/dataTables/dataTables.bootstrap.js"></script>
+<script s’‘rc="js/plugins/dataTables/dataTables.bootstrap.js"></script>
 
 <!--&lt;!&ndash;引入css&ndash;&gt;-->
 <!--<link rel="stylesheet" type="text/css" href="https://cdn.datatables.net/1.10.15/css/jquery.dataTables.min.css">-->
