--- a/src/main/webapp/left_sidebar.html
+++ b/src/main/webapp/left_sidebar.html
@@ -12,7 +12,7 @@
                                     <strong class="font-bold">用户id</strong>
                                 </span>
                                 <span id="span_username" class="text-muted text-xs block">
-                                    <b class="caret">用户身份</b>
+                                    用户身份<b class="caret"></b>
                                 </span>
                             </span>
                         </a>
